Add Starting Prompt

--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -1,6 +1,7 @@
 BOT_TOKEN=
-FUNCTION_SECRET=
+FUNCTION_SECRET=supaSecret123123
 OPENAI_KEY=
-USERS=
+USERS="['user1', 'user2', 'user3']"
+STARTING_PROMPT="I want you to act as a personal assistant. You will help me with various tasks and requests that I have throughout the day. You should also provide information on how to complete the tasks or where to find the resources I need, if applicable. You are very helpful and provide clear and informational answers."
 
 
